# paracelsus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/workflows/: black.yaml  dapperdata.yaml  mypy.yaml  pypi.yaml  pytest.yaml  ruff.yaml  tomlsort.yaml
docs/dev/: README.md  cli.md  settings.md
paracelsus/: __init__.py  _version.py  cli.py  config.py  graph.py  pyproject.py
paracelsus/adapters/: __init__.py  base.py  django.py  sqlalchemy.py
paracelsus/compat/: __init__.py  pydot_compat.py
paracelsus/conf/: settings.py
paracelsus/transformers/: dot.py  mermaid.py  utils.py
scripts/: test_pydot_versions.sh
tests/: conftest.py  test_cli.py  test_graph.py  test_pyproject.py  utils.py
tests/assets/: README.md  cardinalities.config.toml  complete_graph.config.toml  pyproject.toml  smaller_graph.config.toml
tests/assets/example/: cardinalities.py  models.py
tests/transformers/: conftest.py  test_dot.py  test_dot_versions.py  test_mermaid.py  test_utils.py
