[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = [
  "pydot",
  "sqlalchemy",
  "typer"
]
description = ""
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "paracelsus"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort"
]

[project.scripts]
paracelsus = "paracelsus.cli:app"

[tool.ruff]
exclude = [".venv", "./paracelsus/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
paracelsus = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "paracelsus/_version.py"
